# inventory-aware-market-making

./: CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt
config/: experiments.yaml
docs/: future_work.md  limitations.md  methodology.md  results_summary.md  technical_notes.md  validation.md
notebooks/: 01_market_microstructure.ipynb  02_event_driven_simulator.ipynb  03_fixed_spread_baseline.ipynb  04_inventory_aware_quoting.ipynb  05_volatility_aware_spreads.ipynb  06_adverse_selection.ipynb  07_risk_controls.ipynb  08_full_evaluation_and_pnl_attribution.ipynb  09_parameter_calibration_and_model_assumptions.ipynb
outputs/: environment.txt  experiment_report.txt  notebook_report.txt  test_report.txt
outputs/data/: representative_regime_switching_full_adaptive_intervals.csv  representative_regime_switching_full_adaptive_trades.csv  representative_stress_full_risk_intervals.csv  representative_stress_full_risk_risk_events.csv  representative_stress_full_risk_trades.csv  representative_toxic_fixed_intervals.csv  representative_toxic_fixed_trades.csv
outputs/tables/: attribution_regime_switching_full_adaptive.csv  attribution_stress_full_risk.csv  attribution_toxic_fixed.csv  calibration_fill_probability_by_distance.csv  calibration_markout_by_side.csv  robustness_risk_limits.csv  (+13 more)
scripts/: build_notebooks.py  run_all_experiments.py
tests/: test_analysis_models.py  test_expected_behaviour.py  test_monte_carlo_stats.py  test_primitives_ledger.py  test_quoting_estimators.py  test_risk_execution.py  test_simulator_attribution.py  test_toxic_market.py
(+21 files in other folders)
