[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-aware-market-making"
version = "1.0.0"
description = "Event-driven market-making simulator with inventory, volatility, adverse-selection, risk-control, and P&L attribution modules."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Amir Mahmoudinia"}]
dependencies = [
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.9,<4",
  "scipy>=1.13,<2",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "jupyter>=1.0,<2",
  "nbclient>=0.10,<1",
  "nbformat>=5.10,<6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
